--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Oswald&display=swap');
 
 * {
     margin: 0;
@@ -7,14 +7,15 @@
 }
 
 body {
-    font-family: lato, sans-serif;
+    font-family: Lato, sans-serif;
+    font-weight: 300;
     color: #3a3a3a;
 }
 
 /* headings and logo */
 
 h1, h2 {
-    font-family: oswald, sans-serif;
+    font-family: Oswald, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
     color: #252525;
@@ -25,6 +26,8 @@ h1, h2 {
     font-size: 280%;
     margin-left: 30px;
 }
+
+/* navigation links */
 
 #menu {
     font-size: 110%;
@@ -54,7 +57,7 @@ h1, h2 {
     border-bottom: 1px solid #3a3a3a;
 }
 
-/* hero-image */
+/* hero image and cover text */
 
 #hero-outer {
     height: 600px;
@@ -69,15 +72,17 @@ h1, h2 {
 }
 
 #hero-image {
-    width: 100%;
     height: 600px;
-    background: url(../images/hero-image.webp) no-repeat center center;
+    width: 100%;
+    background: url('../images/hero-image.webp') no-repeat center center;
 
+    /* animates zoom effect on loading page */
     animation-name: hero-zoom;
     animation-duration: 5s;
     animation-fill-mode: forwards;
 }
 
+/* creates the level of zoom for hero image */
 @keyframes hero-zoom {
     from{
         transform: scale(1);
@@ -133,7 +138,7 @@ h1, h2 {
 hr {
     border-top: 1px solid #3a3a3a;
     width: 100%;
-    margin: 5px;
+    margin: 5px 0;
 }
 
 .left-about-heading {
@@ -162,7 +167,7 @@ hr {
 
 #welcome {
     text-align: center;
-    margin: 25px 0;
+    margin: 20px 0;
     font-size: 280%;
 }
 
@@ -175,17 +180,18 @@ hr {
     border-width: 1px;
     border-radius: 50%;
     margin: 0 auto;
-
 }
 
 #circle-cover-bg {
-    background: url(../images/ethos-center-image.jpg) no-repeat center center;
+    background: url('../images/ethos-center-image.jpg') no-repeat center center;
     height: 100%;
     border-radius: 50%;
 }
 
+/* event times */
+
 #times {
-    background-image: url(../images/dublin-city.webp);
+    background-image: url('../images/dublin-city.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
@@ -195,7 +201,7 @@ hr {
 
 #times div {
     color: #fafafa;
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(0, 0, 0, .6);
     width: 20%;
     height: 300px;
     float: left;
@@ -203,16 +209,16 @@ hr {
     text-align: center;
     border: 2px solid white;
     box-sizing: border-box;
-
 }
 
 #times h2 {
     color: #fafafa;
 }
 
+/* footer */
+
 footer {
     height: 150px;
-
 }
 
 .social-networks {
@@ -230,6 +236,8 @@ footer {
     color: #3a3a3a;
 }
 
+/* gallery */
+
 #photos {
     clear: both;
     line-height: 0;
@@ -241,6 +249,9 @@ footer {
     width: 100%;
 }
 
+/* Media queries */
+
+/* For larger to medium screens size from 1200px wide and down */
 @media screen and (max-width: 1200px) {
     #club-ethos {
         width: 65%;
@@ -266,17 +277,57 @@ footer {
         padding: 0;
     }
 
+    #times > div {
+        width: 100%;
+        clear: both;
+        height: 150px;
+        padding: 0;
+    }
+
     hr {
         display: none;
     }
 }
 
+/* For medium screen sizes from 950px wide and down */
 @media screen and (max-width: 950px) {
+
     #menu {
         clear: left;
         float: left;
         margin-left: 30px;
         margin-bottom: 20px;
         line-height: 25px;
+    }
+
+    #cover-text {
+        left: 0;
+    }
+
+    #club-ethos {
+        width: 90%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    .left-about-heading, .right-about-heading {
+        width: inherit;
+    }
+
+    .left-about-heading h2, .right-about-heading h2 {
+        width: 100%;
+        text-align: center;
+    }
+
+    .left-about-heading p, .right-about-heading p {
+        text-align: center;
+        padding: 0 20px;
+    }
+}
+
+/* For small screen sizes below 800px width */
+@media screen and (max-width: 800px) {
+    #photos {
+        column-count: 2;
     }
 }
